Fixes contact me section spacing on mobile

--- a/css/contact-me.css
+++ b/css/contact-me.css
@@ -34,20 +34,28 @@
 	grid-template-columns: 1fr 1fr 1fr;
 }
 
-@media screen and (max-width: 500px) { 
-	#contact-me-container { display: block; }
-	#profile-picture-container { margin-bottom: 25px; }
-	#contact-me-container #contact-me-content { padding-right: 0px; }
-	
-	.contact-me-links { 
-		display: block; 
-		text-align: center;
-	} 
-	
-	#contact-me-container #profile-picture-container {
+@media screen and (max-width: 800px) {
+		#contact-me-container #profile-picture-container {
 		display: none;
 		visibility: hidden;
 	}
+
+	#contact-me-container {
+		display: block;
+	}
+}
+
+@media screen and (max-width: 500px) { 
+	#contact-me-container { display: block; }
+	#profile-picture-container { margin-bottom: 25px; }
+	#linkedin-link, #linkedin-container { text-align: center; }
+	#contact-me-container #contact-me-content { padding-right: 0px; }
+	
+	.contact-me-links { 
+		text-align: center;
+		grid-template-columns: unset;
+		grid-template-rows: 1fr 1fr 1fr;
+	} 
 
 	#profile-picture-container #profile-picture-content { 
 		margin: 0 auto;
